Čišćenje koda, dodavanje još testnih slučajeva